# basic-multisig

./: Cargo.toml  README.md
example-data/: 1.create-wallets.md  2.add-signers.md  3.transfer-funds.md  4.sing-pending.md
src/: api.rs  main.rs  node.rs  schema.rs  service.rs  transaction.rs  wallet.rs
src/proto/: mod.rs  schemes.proto
